# MITMqtt

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  main.cpp
src/core/: mqtt_handler.cpp  mqtt_handler.hpp  session.cpp  session.hpp
src/gui/: window.cpp  window.hpp
src/utils/: certificate_manager.cpp  certificate_manager.hpp
tests/: arduino_test_suite.ino  arduino_tls_test.ino  iot_sensor_test.ino
tests/arduino_tls_test/: arduino_tls_test.ino
tests/iot_sensor_test/: iot_sensor_test.ino
